--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "admin": "file:",
     "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
+    "firebase": "^11.6.1",
     "font-awesome-icons": "^1.6.0",
     "html2pdf.js": "^0.10.3",
     "moment": "^2.30.1",
