--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.1.5",
     "react-scripts": "5.0.1",
+    "react-select": "^5.10.1",
     "react-share": "^5.1.2",
     "react-toastify": "^10.0.6",
     "uuid": "^11.0.5",
